--- a/front-end-demos/jquery/jquery-carousel-demo-two.html
+++ b/front-end-demos/jquery/jquery-carousel-demo-two.html
@@ -15,10 +15,8 @@
             padding: 0;
           }
           .carousel .imgs{
-            width: 1600px;
             margin: 0;
             padding: 0;
-            position: absolute;
           }
           /*
           .carousel .imgs::after{
@@ -33,7 +31,7 @@
           */
           .carousel .imgs>li {
             width: 400px;
-            float: left;
+            display: none;
           }
           .carousel {
             width: 400px;
