--- a/front-end-demos/pages/company-index/index.html
+++ b/front-end-demos/pages/company-index/index.html
@@ -7,6 +7,15 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
+   <div class="carousels">
+        <ul class="imgs">
+          <li><a href="#"><img src="./imgs/carousel-img-1.jpeg" alt="1"></a></li>
+          <li><a href="#"><img src="./imgs/carousel-img-2.jpeg" alt="2"></a></li>
+          <li><a href="#"><img src="./imgs/carousel-img-3.jpeg" alt="3"></a></li>
+          <li><a href="#"><img src="./imgs/carousel-img-4.jpeg" alt="4"></a></li>
+        </ul>
+        <a href="#" class="arrow prev"><</a>
+        <a href="#" class="arrow next">></a>
   <header>
   <nav class="navbar">
     <div class="container">
@@ -32,6 +41,19 @@
       </div>
     </div>
   </header>
+      </div>
+
+  <section class="load-more-imgs">
+    <div class="container">
+      <div class="services-head">
+        <h3>IMAGES</h3>
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
+      </div>
+      <div class="waterfall">
+        <ul class="contents">
+          <li class="empty"></li>
+        </ul>
+  </section>
   <section class="services">
     <div class="container">
       <div class="services-head">
