--- a/front-end-demos/pages/company-index/index.html
+++ b/front-end-demos/pages/company-index/index.html
@@ -313,6 +313,7 @@
       </div>
     </div>
   </footer>
-  <script data-main="js/app" src="js/libs/require.js"></script>
+  <!-- <script data-main="js/app" src="js/libs/require.js"></script> -->
+  <script data-main="dist/app.dist.js" src="js/libs/require.js"></script>
 </body>
 </html>
